--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#6b21a8">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&family=Outfit:wght@800&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="responsive.css">
     <style>
         :root {
             --neon-pink: #ff00ff;
