--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@
         #screen-weeks {
             background: radial-gradient(ellipse at center, rgba(100, 50, 150, 0.3) 0%, transparent 70%);
             justify-content: flex-start;
-            padding-top: 20px;
+            padding-top: 160px !important;
+            /* Push grid down to avoid header overlap */
         }
 
         /* NEON TITLE */
@@ -2669,20 +2670,26 @@
         <div id="screen-weeks" class="screen">
 
             <!-- Quarter Selection - TOP HEADER STYLE -->
+            <!-- Quarter Selection - FIXED TOP HEADER -->
             <div
-                style="position: relative; display: flex; flex-direction: column; align-items: center; justify-content: center; margin-bottom: 20px; z-index: 50;">
-                <div style="text-align:center; margin-bottom:10px; animation: floatCard 4s infinite ease-in-out">
-                    <h1 class="neon-title" style="margin:0; font-size: 2.5rem;">Dünya Seç Bade! 🗺️</h1>
+                style="position: absolute; top: 10px; left: 0; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 50; pointer-events: none;">
+                <!-- Title -->
+                <div
+                    style="text-align:center; margin-bottom: 5px; animation: floatCard 4s infinite ease-in-out; pointer-events: auto;">
+                    <h1 class="neon-title" style="margin:0; font-size: 2.5rem; text-shadow: 0 0 15px rgba(0,0,0,0.8);">
+                        Dünya Seç Bade! 🗺️</h1>
                 </div>
 
                 <!-- Dropdown Trigger Button -->
-                <button id="quarter-title-btn" onclick="toggleQuarterMenu()">
-                    <span id="quarter-label">Q1: Hafta 1-13</span>
-                    <span style="font-size:0.8rem">▼</span>
-                </button>
+                <div style="pointer-events: auto;">
+                    <button id="quarter-title-btn" onclick="toggleQuarterMenu()">
+                        <span id="quarter-label">Q1: Hafta 1-13</span>
+                        <span style="font-size:0.8rem">▼</span>
+                    </button>
+                </div>
 
                 <!-- Hidden Menu -->
-                <div id="quarter-menu" class="quarter-menu">
+                <div id="quarter-menu" class="quarter-menu" style="pointer-events: auto;">
                     <div class="quarter-btn active" onclick="setQuarter(1)">Q1: Hafta 1-13</div>
                     <div class="quarter-btn" onclick="setQuarter(2)">Q2: Hafta 14-26</div>
                     <div class="quarter-btn" onclick="setQuarter(3)">Q3: Hafta 27-39</div>
