--- a/index.html
+++ b/index.html
@@ -427,8 +427,16 @@
         #screen-weeks {
             background: radial-gradient(ellipse at center, rgba(100, 50, 150, 0.3) 0%, transparent 70%);
             justify-content: flex-start;
-            padding-top: 160px !important;
-            /* Push grid down to avoid header overlap */
+            padding-top: 280px !important;
+            /* Huge padding to clear the header area completely */
+        }
+
+        /* Responsive Fix for Mobile */
+        @media (max-width: 768px) {
+            #screen-weeks {
+                padding-top: 220px !important;
+                /* Slightly less padding on mobile */
+            }
         }
 
         /* NEON TITLE */
@@ -2672,7 +2680,7 @@
             <!-- Quarter Selection - TOP HEADER STYLE -->
             <!-- Quarter Selection - FIXED TOP HEADER -->
             <div
-                style="position: absolute; top: 10px; left: 0; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 50; pointer-events: none;">
+                style="position: absolute; top: 110px; left: 0; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 50; pointer-events: none;">
                 <!-- Title -->
                 <div
                     style="text-align:center; margin-bottom: 5px; animation: floatCard 4s infinite ease-in-out; pointer-events: auto;">
