--- a/index.html
+++ b/index.html
@@ -460,11 +460,17 @@
 
         #grid-weeks {
             display: grid;
+            position: relative;
+            /* Added for z-index */
+            z-index: 1000;
+            /* Ensure grid is ABOVE the header background layers */
             grid-template-columns: repeat(6, 1fr);
             gap: 5px;
             max-width: 100%;
             width: 100%;
             padding: 10px 20px;
+            pointer-events: auto;
+            /* Force clickable */
         }
 
         .week-card {
@@ -2680,7 +2686,7 @@
             <!-- Quarter Selection - TOP HEADER STYLE -->
             <!-- Quarter Selection - FIXED TOP HEADER -->
             <div
-                style="position: absolute; top: 110px; left: 0; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 50; pointer-events: none;">
+                style="position: absolute; top: 110px; left: 0; width: 100%; height: auto; max-height: 150px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 50; pointer-events: none;">
                 <!-- Title -->
                 <div
                     style="text-align:center; margin-bottom: 5px; animation: floatCard 4s infinite ease-in-out; pointer-events: auto;">
